unpackaged/main/default/objects/fferpcore__FeatureConsoleFeatureStep__mdt/fferpcore__FeatureConsoleFeatureStep__mdt.object-meta.xml
<CustomObject>
    <label>Feature Step</label>
    <pluralLabel>Feature Steps</pluralLabel>
</CustomObject>