unpackaged/main/default/objects/fferpcore__FeatureConsoleFeatureStep__mdt/fields/fferpcore__Configuration__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__Configuration__c</fullName>
    <label>Configuration</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>