unpackaged/main/default/objects/fferpcore__FeatureConsoleFeatureStep__mdt/fields/fferpcore__Feature__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__Feature__c</fullName>
    <label>Feature</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>