unpackaged/main/default/objects/fferpcore__FeatureConsoleFeatureStep__mdt/fields/fferpcore__IsOptional__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__IsOptional__c</fullName>
    <label>Optional</label>
    <length>255</length>
    <type>Text</type>
</CustomField>