unpackaged/main/default/objects/fferpcore__FeatureConsoleFeatureStep__mdt/fields/fferpcore__StepNumber__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__StepNumber__c</fullName>
    <label>Step</label>
    <precision>7</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>