unpackaged/main/default/objects/fferpcore__FeatureConsoleFeatureStep__mdt/fields/fferpcore__StepType__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__StepType__c</fullName>
    <label>Step Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>